# mu-dsu

./: .gitignore  AI_DISCLOSURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: PAPER_CONFORMANCE.md
examples/: nested.calc  vacuum.sm  viewer.mjs
mu_dsu/: __init__.py
mu_dsu/adaptation/: __init__.py  adapter.py  context.py  matcher.py  mu_da_grammar.py  mu_da_parser.py  operations.py
mu_dsu/analysis/: __init__.py  feature_analyzer.py  llm_client.py  types.py
mu_dsu/cli/: main.py  registry.py
mu_dsu/core/: __init__.py  actions.py  composer.py  environment.py  interpreter.py  slice.py
mu_dsu/events/: __init__.py  bus.py  manager.py  types.py
mu_dsu/events/sources/: __init__.py  base.py  file_watch.py  runtime.py  timer.py
mu_dsu/languages/calc_lang/: __init__.py
mu_dsu/languages/mini_js/: __init__.py
mu_dsu/languages/state_machine/: __init__.py  runner.py
mu_dsu/studies/study1_vacuum/: adaptation_script.py  study.py
tests/: test_paper_conformance.py  test_paper_exact_match.py  test_paper_io.py
tests/test_adaptation/: test_adapter.py  test_mu_da_parser.py
tests/test_analysis/: test_ast_analysis.py  test_llm_analysis.py
tests/test_cli/: test_cli.py
tests/test_core/: test_actions.py  test_arithmetic_validation.py  test_composer.py  test_environment.py  test_interpreter.py  test_slice.py
tests/test_events/: test_bus.py  test_integration.py  test_manager.py  test_types.py
tests/test_studies/: test_study1_vacuum.py  test_study2_viewer.py  test_study3_mandelbrot.py
(+43 files in other folders)
